--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "A simple blog application",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node app.js",
+        "seed": "node seeds/seed.js"
     },
     "author": "Kwinn-Korth",
     "license": "MIT",
