--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "author": "Kwinn-Korth",
     "license": "MIT",
     "dependencies": {
-        "sequelize": "^6.3.5",
-        "dotenv": "^8.2.0", 
         "bcrypt": "^5.0.0",
+        "connect-session-sequelize": "^7.0.4",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
         "express-session": "^1.17.1",
+        "hbs": "^4.2.0",
         "mysql2": "^2.1.0",
-        "connect-session-sequelize": "^7.0.4"
+        "sequelize": "^6.3.5"
     }
 }
